add file-loader and create header

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,15 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Restaurant Apps Starter Project</title>
 </head>
 <body>
-<h1>Restaurant Apps Starter Project</h1>
-<p>Hallo coders! Anda berhasil menjalankan starter project.</p>
-<p>Jangan lupa untuk menggunakan salah satu gambar yang berada pada ./images/heros sebagai background hero elemen</p>
-<img src="./images/heros/hero-image_1.jpg" width="450" alt="">
-<img src="./images/heros/hero-image_2.jpg" width="450" alt="">
-<img src="./images/heros/hero-image_3.jpg" width="450" alt="">
-<img src="./images/heros/hero-image_4.jpg" width="450" alt="">
+<header>
+    <nav class="nav">
+        <h2>Restaurants Apps</h2>
+        <ul id="drawer" class="nav_list">
+            <li class="nav_item"><a href="http://localhost:8080/">Home</a></li>
+            <li class="nav_item"><a href="#">Favorite</a></li>
+            <li class="nav_item"><a href="https://github.com/afaafa">About Us</a></li>
+        </ul>
+        <a id="menu" class="icon">
+            <i class="fa fa-bars"></i>
+          </a>
+    </nav>
+</header>
+<div class="hero">
+    <div class="hero_inner">
+        <h1 class="hero_title">Temukan Restoran Favorit Anda</h1>
+        <p class="hero_tagline">Kini anda tidak perlu bingung lagi mencari Restoran yang sesuai keinginan anda, temukan dalam satu apps!</p>
+    </div>
+</div>
+<main>
+
+</main>
+<footer>
+    Copyright © 2020 - Restaurants Apps
+</footer>
 </body>
 </html>
