--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,105 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body, html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
 img {
     display: block;
+}
+
+header {
+    background-color: rgba(130, 23, 82, 0.9);
+    height: 65px;
+    width: 100%;
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    box-shadow: 0 1px 5px rgb(0 0 0 / 10%);
+    transition: all .2s ease-out;
+}
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #f8efd4;
+}
+
+
+.nav > h2 {
+    padding: 0 15px;
+    font-family: 'Lobster Two', cursive;
+    font-weight: 700;
+    font-style: italic;
+    padding: 15px;
+}
+
+.nav_list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+    padding-right: 1.5em;
+}
+
+.nav_item {
+    box-sizing: border-box;
+    display: inline-block;
+}
+
+.nav_item > a {
+    color: #f8efd4;
+    text-decoration: none;
+}
+
+.nav_item a:hover {
+    color: #edc988;
+}
+
+.icon {
+    font-size: 30px;
+    padding: 10px 13px;
+}
+
+.hero {
+    display: flex;
+    align-items: center;
+    min-height: 380px;
+    width: 100%;
+    text-align: center;
+    text-shadow: 0px 2px 10px #403f3f;
+    background-position: center;
+    background-image: url("../public/images/heros/hero-image_4.jpg");
+}
+
+.hero_inner {
+    margin: 0 auto;
+    max-width: 800px;
+}
+
+.hero_title {
+    color: rgb(255, 255, 255);
+    font-weight: 500;
+    font-size: 30px;
+}
+
+.hero_tagline {
+    color: rgb(255, 255, 255);
+    margin-top: 16px;
+    font-size: 15px;
+    font-weight: 300;
 }
