--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,6 +8,7 @@
     <title>Restaurant Apps Starter Project</title>
 </head>
 <body>
+<a href="#maincontent" class="skip-link">Skip To Content</a>
 <header>
     <nav class="nav">
         <h2>Restaurants Apps</h2>
@@ -28,7 +29,7 @@
             <p class="hero_tagline">Cari restoran dan tempat makan terbaik sesuai kota terdekat dalam satu apps!</p>
         </div>
     </section>
-    <section class="content">
+    <section id="maincontent" class="content">
         <div class="resto-container">
             <h1 class="explore">Explore Restaurant</h1>
             <div id="listResto" class="list-resto"></div>
