--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="katalog restoran apps">
-    <link rel="icon" href="favicon.jpeg">
+    <link rel="icon" href="favicon.png">
     <title>Restaurant Apps Starter Project</title>
 </head>
 <body>
